Add integration-tests for projection tasks